# SimpleCppProj

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
simplelib/: CMakeLists.txt
simplelib/test/: first_test.cpp
